    - Fixing a bug in position counting due to $1 pollution.
    - Detecting and reporting disconnected parts of moieties.
    - Introducing Chemistry::OpenSMILES::is_chiral() to detect both chiral
      atoms and moieties.
    - Fixing bug in Chemistry::OpenSMILES::clean_chiral_centers() which
      caused removal of all chiral centers, not just tetrahedral.

0.4.6 2021-04-14

    - Fixing reading/writing of cis/trans ring bonds.

0.4.5 2021-03-25

    - Fixing a bug in aromatic bond detection.

0.4.4 2021-03-09

    - Introducing Chemistry::OpenSMILES::clean_chiral_centers() to remove
      unnecessary tetrahedral chiral settings.

0.4.3 2021-01-25

    - Supporting tetrahedral chirality in
      Chemistry::OpenSMILES::Writer::write_SMILES().
    - Chiralities @TH1 and @TH2 are the same as @ and @@, respectively.
    - Specifying the requirement of Graph v0.97 or later.
    - Fixing issue with homepage.

0.4.2 2021-01-20

    - Exporting Chemistry::OpenSMILES::Writer::write_SMILES().
    - Removing chirality information from written SMILES, as code to
      write this reliably is not yet available.
    - Fixing writing of cis/trans bonds.

0.4.1 2021-01-12

    - Fixing an issue with 'scalar %hash' in t/01_atoms.t.
    - Listing a dependency on Graph::Traversal::DFS.

0.4.0 2021-01-11

    - Adding Chemistry::OpenSMILES::Writer, implementing a SMILES writer
      for the data structures built by Chemistry::OpenSMILES::Parser.
    - Converting 'charge' atom field to integer.
    - Exporting Chemistry::OpenSMILES::is_aromatic().

0.3.2 2020-10-05

    - Explicitly setting bond order to ':' on bonds between aromatic
      atoms.

0.3.1 2020-09-17

    - Establishing deterministic order while generating graph vertices
      for implicit hydrogen atoms.

0.3.0 2020-09-16

    - Deriving counts of implicit hydrogen atoms.
    - Default number of attached hydrogen atoms for atoms in square
      brackets is 0.
    - Supporting bracketless '*' atom.

0.2.1 2020-08-13
