@@ -8,6 +8,8 @@
       atoms and moieties.
     - Fixing bug in Chemistry::OpenSMILES::clean_chiral_centers() which
       caused removal of all chiral centers, not just tetrahedral.
+    - Introducing Chemistry::OpenSMILES::mirror() to invert chiral enters,
+      currently only tetrahedral.
 
 0.4.6 2021-04-14
 
